- 
    Bug 
- 
    Resolution: Done
- 
    P4: Low 
- 
    5.0.0
- 
    None
- 
    Mac OSX
- 
        qtbase/dev: 2f854e50908c342fddb17d6e72b7fb186f9c46de
When QColorDialog::DontUseNativeDialog is set, the non-native dialog does not show up on platforms that actually provide a native color dialog implementation (currently Mac OSX only).
#include <QApplication> #include <QColorDialog> int main(int argc, char *argv[]) { QApplication app(argc, argv); QColorDialog dialog; dialog.setOption(QColorDialog::DontUseNativeDialog); dialog.show(); return app.exec(); }
| For Gerrit Dashboard: QTBUG-29387 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 46216,1 | Fix QColorDialog::DontUseNativeDialog usage | dev | qt/qtbase | Status: MERGED | +2 | 0 |