Fix QColorDialog::DontUseNativeDialog usage

Task-number: QTBUG-29387
Change-Id: I97b3267981a0dcfdc95469cd0725b52ac4845346
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>